--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,11 @@
-<mat-toolbar color="primary" class="flex-spacer">
+<mat-toolbar class="flex-spacer header-bg">
   <mat-toolbar-row>
-    <span>AMMA Named Entity Tagging</span>
+    <h1 class="threed">AMMA Named Entity Tagging</h1>
+    <span class="flex-spacer">
+        <a href="https://github.com/a-mma" title="Go to AMMA Repository" target="_blank">
+          <img class="logo" src="assets/images/icons8-github-96.png">
+        </a>
+    </span>
+
   </mat-toolbar-row>
-  </mat-toolbar>
+</mat-toolbar>
