--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,21 +1,33 @@
 /* You can add global styles to this file, and also import other style files */
 
+@import url("https://fonts.googleapis.com/css?family=Dancing+Script:700");
 body {
-    padding: 0;
-    margin: 0;
-    font-family: Roboto, sans-serif;
-  }
-  .flex-spacer {
+  padding: 0;
+  margin: 0;
+  font-family: Roboto, sans-serif; // opacity:. ;
+}
 
-    flex: 1 1 auto;
-  }
+.flex-spacer {
+  flex: 1 1 auto;
+}
 
-  ::-moz-selection { /* Code for Firefox */
-    color: red;
-    background: yellow;
+::-moz-selection {
+  /* Code for Firefox */
+  color: red;
+  background: yellow;
 }
 
 ::selection {
-    color: red; 
-    background: yellow;
+  color: red;
+  background: yellow;
+}
+
+.landing-background {
+  background: linear-gradient(to bottom, snow 0%, #ff99cc 100%);
+  min-height: 100vh;
+  height: auto;
+}
+
+@media only screen and (max-width: 600px) {
+  height: auto;
 }
