--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,13 @@
 <mat-toolbar class="flex-spacer header-bg">
   <mat-toolbar-row>
-    <h1 class="threed">AMMA Named Entity Tagging</h1>
+    <span>
+      <img class="logo" src="assets/images/amma.png">
+    </span>
+    <h3>Indic Entity Tagger</h3>
     <span class="flex-spacer">
-        <a href="https://github.com/a-mma" title="Go to AMMA Repository" target="_blank">
-          <img class="logo" src="assets/images/icons8-github-96.png">
-        </a>
+      <a href="https://github.com/a-mma" title="Go to A-MMA Repository" target="_blank">
+        <img class="logo" src="assets/images/icons8-github-96.png">
+      </a>
     </span>
 
   </mat-toolbar-row>
