--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,7 +6,7 @@
     <h3>Indic Entity Tagger</h3>
     <span class="flex-spacer">
       <a href="https://github.com/a-mma" title="Go to A-MMA Repository" target="_blank">
-        <img class="logo" src="assets/images/icons8-github-96.png">
+        <img class="github-logo" src="assets/images/icons8-github-96.png">
       </a>
     </span>
 
