--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,4 +1,3 @@
-
 .sticky {
   position: fixed;
   top: 0;
@@ -33,8 +32,14 @@ h1 {
   }
 }
 
-.logo{
+.logo {
   height: auto;
   width: 79px;
+  float: right;
+}
+
+.github-logo {
+  height: auto;
+  width: 3em;
   float: right;
 }
