Added text highlighting

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,3 +31,11 @@ body {
 @media only screen and (max-width: 600px) {
   height: auto;
 }
+
+.angular-google-recaptcha-container {
+  margin-bottom: 3% !important;
+}
+
+.hwt-container {
+  display: block !important;
+}
